# Doggo_Description

./: CMakeLists.txt  README.md  package.xml
config/: controller.yaml  display.rviz  joint_names_doggo_description.yaml
include/: mimic.hpp
launch/: display.launch  gazebo.launch
meshes/: base_link.stl  frame.STL  leg11.STL  leg12.STL  leg13.STL  leg14.STL  leg21.STL  leg22.STL  leg23.STL  leg24.STL  leg31.STL  leg32.STL  leg33.STL  leg34.STL  leg41.STL  leg42.STL  leg43.STL  leg44.STL  realsense_d435.STL  shoe1.STL  shoe2.STL  shoe3.STL  shoe4.STL
src/: mimic.cpp
urdf/: doggo_description.csv  doggo_description.urdf  doggo_description_with_rgbd_camera.urdf
